Try YT windows.

--- a/notebooks/06-index-yt-kathy.ipynb
+++ b/notebooks/06-index-yt-kathy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "from glob import glob\n",
     "from tqdm import tqdm_notebook\n",
     "from itertools import islice\n",
-    "from boltons.iterutils import chunked_iter\n",
+    "from boltons.iterutils import chunked_iter, windowed_iter\n",
     "from datetime import datetime as dt\n",
     "from collections import UserDict\n",
     "\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,14 +176,14 @@
     "    def published_at(self):\n",
     "        return dateutil.parser.parse(self['published_at'])\n",
     "    \n",
-    "    def sentence_texts(self, size=20):\n",
-    "        for chunk in chunked_iter(self.doc, 20):\n",
+    "    def sentence_texts(self, size=10):\n",
+    "        for chunk in windowed_iter(self.doc, 20):\n",
     "            yield ' '.join([t.text for t in chunk])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,13 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ebb6fdb16ca4712823604047171275a",
+       "model_id": "3a812daa6f96419b9c63c9dccaff8895",
        "version_major": 2,
        "version_minor": 0
       },
@@ -359,13 +359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72f9f0f661c34179b1111e47cc6df64c",
+       "model_id": "d886458cc30241c98510083b89833b72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,59 +414,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bf6d4f802ec4f0dbd01d8ce3b6c18bf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=88), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "yt_df = yt_corpus.df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f74d297d975f46189d20ac6c9f382358",
+       "model_id": "713b56475e76481a83d2db47688af514",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +449,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=1735), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=32187), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -506,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,13 +487,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a0893cdb30e4413b23228ccd4583e8a",
+       "model_id": "77f49664a4a8478a8e01a684b7ce3371",
        "version_major": 2,
        "version_minor": 0
       },
@@ -570,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -617,32 +580,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "that 's what I 've been fighting for but I apparently you know we found that this is threatening to \n",
+      "this great state I want you to make the commitment to because you know how important this election is to \n",
       "\n",
-      "41 the year before that 43 last year we moved up to 24 this year we moved up to 20 \n",
+      "people for us this is one of our exciting days most exciting days each year because we really get to \n",
       "\n",
-      "wonderful wonderful job it made a really strong argument for sending her to the US Senate she will be an \n",
+      "this has all been about since this journey began 14 months ago everywhere that I 've gone in our beautiful \n",
       "\n",
-      "an active role in their kids education I 'm going to thank all the teachers who dedicate their incredible talents \n",
+      "future this is an opportunity that exists today if we miss that opportunity it could be 20 years to 30 \n",
       "\n",
-      "that battle for Wisconsin 's middle class that has been what this has all been about since this journey began \n",
+      "world dairy expo this is such an exciting event because it gives us a chance to showcase to the world \n",
       "\n",
-      "grateful for the supporters who circulated those nomination papers and made the submission possible all together we had a goal \n",
+      "Thank You Wisconsin this has been an incredible journey 14 months long this is a huge victory for Wisconsin 's \n",
       "\n",
-      "an active role in their kids education we want to thank all the teachers who dedicate their incredible talents inspiring \n",
+      "this incredible storm I want to thank all of you for everything you 've done for the people to save \n",
       "\n",
-      "of all we want to encourage every student in the state to excel the new school year is exciting and \n",
+      "this tax rate issue this fundamental fairness issue we know from Tommy Thompson 's financial disclosures that he 's now \n",
       "\n",
-      "the hustle and bustle and in light of the recent tragedy everyone will take the opportunity to cherish the family \n",
+      "really struggling in this economic and political environment right now and people will just open up about their very real \n",
       "\n",
-      "our other son Alex will soon start his senior year at wamu tosa east high school it 's hard to \n",
+      "- forth enthusiasm and it 's a good thing out there I 'm glad to see such a great crowd \n",
       "\n"
      ]
     }
@@ -653,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
