--- a/notebooks/06-index-yt-kathy.ipynb
+++ b/notebooks/06-index-yt-kathy.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
     "        return dateutil.parser.parse(self['published_at'])\n",
     "    \n",
     "    def sentence_texts(self, size=10):\n",
-    "        for chunk in windowed_iter(self.doc, 20):\n",
+    "        for chunk in windowed_iter(self.doc, size):\n",
     "            yield ' '.join([t.text for t in chunk])"
    ]
   },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,13 +423,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "713b56475e76481a83d2db47688af514",
+       "model_id": "ffdc61ae91524fcf805001c66a8a682c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,7 +449,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=32187), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=33027), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -580,32 +580,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this great state I want you to make the commitment to because you know how important this election is to \n",
+      "this is a huge victory for Wisconsin 's middle class \n",
       "\n",
-      "people for us this is one of our exciting days most exciting days each year because we really get to \n",
+      "this has been an incredible journey one that has shown \n",
       "\n",
-      "this has all been about since this journey began 14 months ago everywhere that I 've gone in our beautiful \n",
+      "this is at a time when we 're supposed to \n",
       "\n",
-      "future this is an opportunity that exists today if we miss that opportunity it could be 20 years to 30 \n",
+      "this important piece of the challenge that lies ahead of \n",
       "\n",
-      "world dairy expo this is such an exciting event because it gives us a chance to showcase to the world \n",
+      "this is an exciting day this is a day of \n",
       "\n",
-      "Thank You Wisconsin this has been an incredible journey 14 months long this is a huge victory for Wisconsin 's \n",
+      "this is one of our exciting days most exciting days \n",
       "\n",
-      "this incredible storm I want to thank all of you for everything you 've done for the people to save \n",
+      "this is one of our exciting days most exciting days \n",
       "\n",
-      "this tax rate issue this fundamental fairness issue we know from Tommy Thompson 's financial disclosures that he 's now \n",
+      "this has been an incredible journey 14 months long this \n",
       "\n",
-      "really struggling in this economic and political environment right now and people will just open up about their very real \n",
+      "but this shows Kosovo as a whole a lot of \n",
       "\n",
-      "- forth enthusiasm and it 's a good thing out there I 'm glad to see such a great crowd \n",
+      "this fundamental fairness issue we know from Tommy Thompson 's \n",
       "\n"
      ]
     }
