--- a/notebooks/05-index.ipynb
+++ b/notebooks/05-index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dclure/Projects/infuzzy/env/lib/python3.6/site-packages/torch/serialization.py:316: SourceChangeWarning: source code of class 'torch.nn.modules.rnn.LSTM' has changed. you can retrieve the original source code by accessing the object's source attribute or set `torch.nn.Module.dump_patches = True` and use the patch tool to revert the changes.\n",
+      "  warnings.warn(msg, SourceChangeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "sent_encoder = torch.load(\n",
     "    '../../plot-ordering/data/models/new/kt-reg/sent_encoder.68.bin',\n",
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +869,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sent_idx.save('../data/sent_idx.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -869,13 +887,42 @@
        "True"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sent_idx.save('../data/sent_idx.bin')"
+    "sent_idx = AnnoyIndex(1000)\n",
+    "sent_idx.load('../data/sent_idx.bin')\n",
+    "sent_idx.build(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query(\"I mean our kids are really well educated, but we need to take politics out of the education system.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query(\"I mean our kids are really well educated, but we need to take politics out of the education system.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sent_idx.load?"
    ]
   },
   {
